2006-02-06  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::Auth to sbuild::auth.

2006-02-05  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::Lock to sbuild::lock, sbuild::FileLock to
	sbuild::file_lock, and sbuild::DeviceLock to sbuild::device_lock.

2006-02-05  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild-config.(cc|h) to sbuild-chroot-config.(cc|h).

	* Rename sbuild::Config to sbuild::chroot_config.

2006-02-05  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::ChrootLvmSnapshot to sbuild::chroot_lvm_snapshot.

	* Rename sbuild::ChrootBlockDevice to sbuild::chroot_block_device.

	* Rename sbuild::ChrootFile to sbuild::chroot_file.

	* Rename sbuild::ChrootPlain to sbuild::chroot_plain.

2006-02-05  Roger Leigh  <rleigh@debian.org>

	* Rename sbuild::Chroot to sbuild::chroot.

	* test/config.ex2/sarge
	(run-session-scripts): Remove duplicate line.

2006-02-05  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-auth-conv.h: Add an error exception typedef.

	* schroot/sbuild-auth-conv-tty.cc
	(get_delay): Throw an exception on fatal timeout.  Log a warning
	rather than using std::cerr.
	(read_string): Return a string rather than a pointer to an
	allocated string.  Throw an exception on failure.
	(read_string): Don't print a newline after the prompt message.
	(conversation): Remove all string cleanup code and replace with a
	single exception handler.

2006-02-05  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-keyfile.h
	(operator >>): Linecounting counts from line 1, rather than 0.
	Fix error message capitalisation.  All parsed groups and keys are
	added to a temporary keyfile, which is then assigned to the
	current keyfile, to allow the correct catching of duplicate groups
	and keys.

	* schroot/sbuild-keyfile.cc
	(operator +=): New function.  Add all of the keys in one keyfile
	to another, overwriting keys on the lhs if already present.
	Comments are carried across.
	(operator +): New function.  Add two keyfiles together.
